--- a/habitsApp/Views/Home/Add.cshtml
+++ b/habitsApp/Views/Home/Add.cshtml
@@ -2,7 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Title"] = "Movie Entry";
+    ViewData["Title"] = "Add Task";
 }
 
 @model habitsApp.Models.ApplicationResponse
@@ -26,7 +26,7 @@
                 <option value="">Select a Category</option>
                 @foreach (Category c in ViewBag.Category)
                 {
-                    <option value="@c.CategoryID">@c.CategoryName</option>
+                    <option value="@c.CategoryID">@c.CategoryDesc</option>
                 }
             </select><br />
 
