--- a/habitsApp/Views/Home/Add.cshtml
+++ b/habitsApp/Views/Home/Add.cshtml
@@ -46,6 +46,6 @@
 
 
 
-            <button type="submit">Submit Movie</button>
+            <button type="submit">Submit</button>
         </form>
     </div>
