--- a/habitsApp/Views/Home/Task.cshtml
+++ b/habitsApp/Views/Home/Task.cshtml
@@ -5,28 +5,28 @@
     ViewData["Title"] = "Add Task";
 }
 
-@model habitsApp.Models.ApplicationResponse
-    Task (Required)
+@model habitsApp.Models.Tasks
+    @*Task (Required)
     • Due Date
     • Quadrant (Required)
     • Category (Dropdown containing options: Home, School, Work, Church)
     • Completed (True/False)
-
+*@
 
     <div>
         <form method="post">
 
             <div asp-validation-summary="All"></div>
 
-            <label asp-for="Task">Task</label>
-            <input asp-for="Task" /><br />
+            <label asp-for="TaskName">Task</label>
+            <input asp-for="TaskName" /><br />
 
-            <label asp-for="CategoryID">Category</label>
-            <select asp-for="CategoryID">
+            <label asp-for="CategoryId">Category</label>
+            <select asp-for="CategoryId">
                 <option value="">Select a Category</option>
-                @foreach (Category c in ViewBag.Category)
+                @foreach (Category c in ViewBag.categories)
                 {
-                    <option value="@c.CategoryID">@c.CategoryDesc</option>
+                    <option value="@c.CategoryId">@c.CategoryDesc</option>
                 }
             </select><br />
 
