--- a/habitsApp/Views/Shared/_Layout.cshtml
+++ b/habitsApp/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Add">Add Task</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quad">View Quadrants</a>
+                        </li>
                     </ul>
                 </div>
             </div>
