--- a/habitsApp/Views/Home/Index.cshtml
+++ b/habitsApp/Views/Home/Index.cshtml
@@ -4,6 +4,9 @@
 @{
     ViewData["Title"] = "View Quadrants";
 }
+
+@model List<Tasks>
+
 <div class="container">
     <div class="row">
         <h2>Stephen Covey's Time Management Matrix</h2>
