--- a/habitsApp/Views/Home/Delete.cshtml
+++ b/habitsApp/Views/Home/Delete.cshtml
@@ -16,7 +16,7 @@
         <input type="hidden" asp-for="taskID">
     </form>
     <br>
-    <a asp-controller="Home" asp-action="MoviesList">
+    <a asp-controller="Home" asp-action="Index">
         <button class="btn btn-primary">CANCEL</button>
     </a>
 </div>
