--- a/habitsApp/Views/Home/Task.cshtml
+++ b/habitsApp/Views/Home/Task.cshtml
@@ -2,13 +2,16 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Title"] = "Add Task";
+    ViewData["Title"] = ViewBag.pageTitle + " Task";
 }
 
 @model habitsApp.Models.Tasks
 
     <div>
-        <form method="post" asp-action="@ViewBag.formAction">
+        <form method="post" asp-controller="Home" asp-action="@ViewBag.formAction">
+            @if (ViewBag.isEdit) {
+                <input type="hidden" value="@Model.taskID" asp-for="taskID">
+            }
 
             <div asp-validation-summary="All"></div>
 
