--- a/habitsApp/Views/Home/Index.cshtml
+++ b/habitsApp/Views/Home/Index.cshtml
@@ -1,6 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+﻿
+@*
+AUTHORS
+Toa Pita
+Brayden Buhler
+Nathan Conrad
+Isaac Waddell
 *@
+
 @{
     ViewData["Title"] = "View Quadrants";
 }
